
syntax = "proto3";

package proto;
option go_package = "istomyang.github.com/like-iam/api/proto/v1";

service Cache {
  rpc ListSecrets(ListRequest) returns (ListSecretsReply) {}
  rpc ListPolicies(ListRequest) returns (ListPoliciesReply) {}
}

message SecretInfo {
  string name = 1;
  string secret_id  = 2;
  string username   = 3;
  string secret_key = 4;
  int64 expires = 5;
  string description = 6;
  string created_at = 7;
  string updated_at = 8;
}

message PolicyInfo {
  string name= 1;
  string username   = 2;
  string policy_str = 3;
  string policy_shadow = 4;
  string created_at = 5;
}

message ListRequest {
  optional int64 offset = 1;
  optional int64 limit = 2;
}

message ListSecretsReply {
  int64 count = 1;
  repeated SecretInfo items = 2;
}

message ListPoliciesReply {
  int64 count = 1;
  repeated PolicyInfo items = 2;
}